fix: spacing on mobile between text and icon

--- a/css/main.css
+++ b/css/main.css
@@ -190,6 +190,10 @@ button:focus-visible {
   flex-grow: 1;
 }
 
+.links-list__link-icon {
+  margin-left: 6px;
+}
+
 .socials {
   margin-top: 48px;
   margin-bottom: 16px;
